2009-08-19 Chris Allegretta <chrisa@asty.org>
	* Fix issue with soft wrapping not displaying the last character of each line,
	  fixed bug discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-08-17 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/(gentoo|sh|tcl).nanorc: Fix problems with empty regexes on POSIX.
	  Fixes Savannah bug 27175.

2009-08-17 Chris Allegretta <chrisa@asty.org>
	* Initial soft line wrapping implementation.  Command line flags
	  -$ or --softwrap.  
	* nano.c, text.c: Clean up some fprintf warnings in debug mode due to printing
	  a size_t without using the zd specifier.
2009-08-13 Chris Allegretta <chrisa@asty.org>
	* New global flag implementation courtesy of Adam Wysocki <gophi@arcabit.pl>, allows
 	  previous undo flag to be implemented consistent with other flags.

GNU nano 2.1.10 - 2009.07.28

2009-07-27 Chris Allegretta <chrisa@asty.org>
	* text.c (undo_cut, redo_cut): Don't actually try and undo/redo an empty cut, i.e. the magicline. 
	  Fixes crash on cutting last line discovered by Eitan Adler <eitanadlerlist@gmail.com>.

2009-07-11 Chris Allegretta <chrisa@asty.org>
	* nano-regress: Small tweaks
	* Change undo code to off unless unabled via a command line option (-u/--undo).  Until this code
	  stabilizes this is the only responsible way to treat it.

2009-03-08 Chris Allegretta <chrisa@asty.org>
	* TODO - Break out some targets for various features into 2.2 
	  and 2.4 series for things which are feasible.

2009-02-28 Chris Allegretta <chrisa@asty.org>
	* configure.ac: Add check for whether _XOPEN_SOURCE_EXTENDED is needed for
	  curses to work w/color.  Fixes compilation on HP-UX with older GCC, 
	  reported by jay.krell@cornell.edu.

2009-02-23 Eitan Adler <eitanadlerlist@gmail.com>
	* doc/man/Makefile.am: Fix make variable substitution to be more portable

2009-02-23 Chris Allegretta <chrisa@asty.org>
	* rcfile.c (parse_keybinding) - Define a var before tryung to use it.  Whoops!